Added a proxy for the update checker so that it can successfully ping vanillaforums.org for updates (browser security issues were preventing cross-domain xmlhttprequests before now).

--- a/applications/garden/design/admin.css
+++ b/applications/garden/design/admin.css
@@ -368,6 +368,7 @@ strong {
    padding: 3px 6px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
+	text-shadow: 1px 1px 1px #444;
 }
 .Alert a {
    color: #fff;
